crates/crucible-cli/src/tui/testing/snapshots/crucible_cli__tui__testing__e2e_flow_tests__graduation_flow__e2e_graduation_overflow_mid_stream.snap
---
source: crates/crucible-cli/src/tui/testing/e2e_flow_tests.rs
expression: h.full_state()
---
═══ SCROLLBACK ═══

 > Tell me a long story

 ● First paragraph of the response.
   
   Paragraph 1 with enough text to take up space in the viewport.
   
   Paragraph 2 with enough text to take up space in the viewport.
   
   Paragraph 3 with enough text to take up space in the viewport.
   
   Paragraph 4 with enough text to take up space in the viewport.
   
   Paragraph 5 with enough text to take up space in the viewport.
   
   Paragraph 6 with enough text to take up space in the viewport.
   
   Paragraph 7 with enough text to take up space in the viewport.
   
   Paragraph 8 with enough text to take up space in the viewport.
   
   Paragraph 9 with enough text to take up space in the viewport.
   
   Paragraph 10 with enough text to take up space in the viewport.
   
   Paragraph 11 with enough text to take up space in the viewport.
   
   Paragraph 12 with enough text to take up space in the viewport.
   
   Paragraph 13 with enough text to take up space in the viewport.
   
   Paragraph 14 with enough text to take up space in the viewport.
   
═══ VIEWPORT ═══
   Paragraph 16 with enough text to take up space in the viewport.              
                                                                                
   Paragraph 17 with enough text to take up space in the viewport.              
                                                                                
   Paragraph 18 with enough text to take up space in the viewport.              
                                                                                
   Paragraph 19 with enough text to take up space in the viewport.              
                                                                                
   Paragraph 20 with enough text to take up space in the viewport.              
   ▌                                                                            
                                                                                
                                                                                
 >                                                                              
                                                                                
▸ Plan │ ollama/llama3.2 │ Ready
