crates/crucible-cli/src/tui/testing/snapshots/crucible_cli__tui__testing__e2e_flow_tests__graduation_flow__table_graduation_boundary.snap
---
source: crates/crucible-cli/src/tui/testing/e2e_flow_tests.rs
expression: h.full_state()
---
═══ SCROLLBACK ═══

 > Show table

 ● Line 1
   
   Line 2
   
   Line 3
   
   ┌─────┬─────┐
   │ A   │ B   │
   ├─────┼─────┤
   │ 1   │ 2   │
   ├─────┼─────┤
   │ 3   │ 4   │
   ├─────┼─────┤
   │ 5   │ 6   │
   └─────┴─────┘
   
   After table.
   
   Paragraph 1.
   
   Paragraph 2.
   
   Paragraph 3.
   
   Paragraph 4.
   
   Paragraph 5.
═══ VIEWPORT ═══
                                                                                
   Paragraph 6.                                                                 
                                                                                
   Paragraph 7.                                                                 
                                                                                
   Paragraph 8.                                                                 
                                                                                
   Paragraph 9.                                                                 
                                                                                
   Paragraph 10.                                                                
                                                                                
                                                                                
 >                                                                              
                                                                                
▸ Plan │ ollama/llama3.2 │ Ready
